--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "baseUrl": ".",
+    //"baseUrl": ".",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-  },"ts-node": {
-  "compilerOptions": {
-    "module": "CommonJS"
+    "allowSyntheticDefaultImports": true
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
   }
-}
 }
