--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^0.26.1",
     "chrome-remote-interface": "^0.33.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
